# ignite-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: format-config.md
examples/configs/: benchmark-10k.yaml  eval-settings.yaml  full.yaml  minimal.yaml  read-settings.yaml
examples/data-10k/: commits.jsonl  devblog.jsonl  forum.jsonl  stackoverflow.jsonl
examples/data/github/: events.jsonl
examples/data/hackernews/: events.jsonl
examples/data/reddit/: events.jsonl
src/ignite_tools/: __init__.py
src/ignite_tools/core/: __init__.py  cli.py  config.py  embed.py  format.py  sampling.py  sniffer.py  sources.py
src/ignite_tools/eval/: __init__.py  cli.py  recommend.py  requirements.py  runner.py  scorer.py  selector.py  worker.py
src/ignite_tools/eval/models/: __init__.py  registry.yaml
src/ignite_tools/read/: __init__.py  cli.py  config.py  core.py
tests/: conftest.py
tests/benchmarks/: test_core_benchmarks.py
tests/core/: test_cli.py  test_cloud_sources.py  test_config.py  test_format.py  test_sampling.py  test_sniffer.py  test_sources.py  test_strict_and_summary.py
tests/eval/: test_eval.py  test_runner_worker.py
tests/read/: test_cli.py
